Updated README for Topmost toggle

--- a/README
+++ b/README
@@ -9,6 +9,7 @@ KEYBOARD SHORTCUTS:
 
 Main Form:
 H - Toggle HUD Mode
+M - Toggle Topmost Mode
 T - Open Tracking List Editor
 X - Toggle Exclusive Mode
 Ctrl + Q - Quit
